tests/errors/attribute-derive-partial-eq-enum-payload.ari
@derive(PartialEq)
enum Value {
  Number(i64),
}

fn main() -> i64 {
  return 0;
}
